2010-01-03  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Eric Seidel.

        Update wtf/Platform.h to document the new system for porting macros.
        https://bugs.webkit.org/show_bug.cgi?id=33130

        * wtf/Platform.h:

2009-12-29  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Maciej Stachowiak.

        PLATFORM(CAIRO) should be defined by WIN_CAIRO define
        https://bugs.webkit.org/show_bug.cgi?id=22250

        * wtf/Platform.h: Define WTF_PLATFORM_CAIRO for GTK port only
        For the WinCairo port WTF_PLATFORM_CAIRO is already defined in config.h

2009-12-28  Shu Chang  <Chang.Shu@nokia.com>

        Reviewed by Laszlo Gombos.

        [Qt] Delete ThreadPrivate instance after it is finished.
        https://bugs.webkit.org/show_bug.cgi?id=32614

        * wtf/qt/ThreadingQt.cpp:
        (WTF::ThreadMonitor::instance):
        (WTF::ThreadMonitor::threadFinished):
        (WTF::createThreadInternal):
        (WTF::detachThread):

2009-12-28  Patrick Gansterer  <paroga@paroga.com>

        Reviewed by Maciej Stachowiak.

        Cleanup of #define JS_EXPORT.

        * API/JSBase.h:

2009-12-27  Patrick Gansterer  <paroga@paroga.com>

        Reviewed by Adam Barth.

        WinCE buildfix (HWND_MESSAGE isn't supported there)

        * wtf/win/MainThreadWin.cpp:
        (WTF::initializeMainThreadPlatform):

2009-12-27  Patrick Gansterer  <paroga@paroga.com>

        Reviewed by Adam Barth.

        Added a file with WinMain function to link agains in WinCE.

        * os-win32/WinMain.cpp: Added.
        (convertToUtf8):
        (WinMain):

2009-12-24  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Unreviewed; revert of r52550.

        The change regressed the following LayoutTests for QtWebKit.

        fast/workers/worker-call.html -> crashed
        fast/workers/worker-close.html -> crashed

        * wtf/qt/ThreadingQt.cpp:
        (WTF::waitForThreadCompletion):
        (WTF::detachThread):
